; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/converter/hp_46010a/extr_matrix.c_Matrix_ReceiveByte.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/converter/hp_46010a/extr_matrix.c_Matrix_ReceiveByte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MATRIX_COLS = common dso_local global i32 0, align 4
@PINB = common dso_local global i32 0, align 4
@SDATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @Matrix_ReceiveByte to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Matrix_ReceiveByte() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  store i32 0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %19, %0
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @MATRIX_COLS, align 4
  %7 = icmp slt i32 %5, %6
  br i1 %7, label %8, label %22

8:                                                ; preds = %4
  %9 = call i32 (...) @SCLK_increment()
  %10 = load i32, i32* @PINB, align 4
  %11 = load i32, i32* @SDATA, align 4
  %12 = and i32 %10, %11
  %13 = shl i32 %12, 4
  store i32 %13, i32* %2, align 4
  %14 = load i32, i32* %2, align 4
  %15 = load i32, i32* %3, align 4
  %16 = ashr i32 %14, %15
  %17 = load i32, i32* %1, align 4
  %18 = or i32 %17, %16
  store i32 %18, i32* %1, align 4
  br label %19

19:                                               ; preds = %8
  %20 = load i32, i32* %3, align 4
  %21 = add nsw i32 %20, 1
  store i32 %21, i32* %3, align 4
  br label %4

22:                                               ; preds = %4
  %23 = load i32, i32* %1, align 4
  ret i32 %23
}

declare dso_local i32 @SCLK_increment(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
